@startuml

title __PROJECT's Class Diagram__\n

  namespace  {
    namespace odel {
      class Model.Logger {
      }
    }
  }
  

  namespace  {
    namespace dragonpass.project {
      class dragonpass.project.DBMySQLite {
      }
    }
  }
  

  namespace  {
    namespace dragonpass.project {
      class dragonpass.project.DatabaseConnection {
      }
    }
  }
  

  namespace  {
    namespace dragonpass.project {
      class dragonpass.project.Main {
      }
    }
  }
  

  namespace  {
    namespace dragonpass.project {
      class dragonpass.project.LoginController {
      }
    }
  }
  

  namespace  {
    namespace dragonpass.project {
      class dragonpass.project.SubmissionController {
      }
    }
  }
  

  namespace  {
    namespace monitor {
      class monitor.FileObserver {
      }
    }
  }
  

  namespace  {
    namespace monitor {
      abstract class monitor.Observer {
      }
    }
  }
  

  namespace  {
    namespace monitor {
      class monitor.SQLiteObserver {
      }
    }
  }
  

  namespace  {
    namespace monitor {
      class monitor.Subject {
      }
    }
  }
  

  dragonpass.project.DBMySQLite o-- monitor.Observer : observe2
  dragonpass.project.DatabaseConnection o-- monitor.Subject : monitor
  dragonpass.project.DatabaseConnection o-- monitor.Observer : observe1
  dragonpass.project.DatabaseConnection o-- monitor.Observer : observe2
  dragonpass.project.Main -up-|> javafx.application.Application
  dragonpass.project.LoginController o-- monitor.Subject : monitor
  dragonpass.project.LoginController o-- monitor.Observer : observe1
  dragonpass.project.LoginController o-- monitor.Observer : observe2
  dragonpass.project.SubmissionController o-- monitor.Subject : monitor
  dragonpass.project.SubmissionController o-- monitor.Observer : observe1
  dragonpass.project.SubmissionController o-- monitor.Observer : observe2
  monitor.FileObserver -up-|> monitor.Observer
  monitor.FileObserver o-- monitor.Subject : monitor
  monitor.FileObserver o-- monitor.Observer : observe
  monitor.Observer o-- monitor.Subject : subject
  monitor.SQLiteObserver -up-|> monitor.Observer
  monitor.Subject o-- Model.Logger : log


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
